Bug 104940 - Removing a tablet device does not generate out-of-prox events
Summary: Removing a tablet device does not generate out-of-prox events
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-05 01:31 UTC by Peter Hutterer
Modified: 2018-02-13 08:22 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Peter Hutterer 2018-02-05 01:31:34 UTC
Bug in the test function touch_arbitration_remove_tablet(): after litest_delete_device(tablet) for a tablet that is currently in proximity, we should get proximity events (and button release events where applicable), not just the device remove event.
Comment 1 Peter Hutterer 2018-02-07 01:46:53 UTC
See series starting here:
https://lists.freedesktop.org/archives/wayland-devel/2018-February/036853.html
Comment 2 Peter Hutterer 2018-02-13 08:22:25 UTC
commit 44426b460c8fb20d392a9ddded273402e7c3750f
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Mon Feb 5 11:27:09 2018 +1000

    tablet: release the tablet state on device delete


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.